# docs/swagger.json
@@ -4,6 +4,33 @@
         "contact": {}
     },
     "paths": {
+      "/config": {
+        "get": {
+          "description": "get config from backend",
+          "produces": [
+            "application/json",
+            "application/json"
+          ],
+          "tags": [
+            "config"
+          ],
+          "summary": "get config from backend",
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/api.GetConfigResponse"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/api.ErrorResponse"
+              }
+            }
+          }
+        }
+      },
         "/containers": {
             "get": {
                 "description": "list all containers",
@@ -448,6 +475,14 @@
                 }
             }
         },
+      "api.GetConfigResponse": {
+        "type": "object",
+        "properties": {
+          "tileUri": {
+            "type": "string"
+                }
+            }
+        },
         "api.GetSettingsResponse": {
             "type": "object",
             "properties": {
@@ -621,6 +656,9 @@
           "externalImuAngular": {
             "type": "boolean"
           },
+          "file": {
+            "type": "string"
+          },
           "limitVoltage150MA": {
             "type": "number"
           },
@@ -653,6 +691,9 @@
           },
           "tiltEmergencyMillis": {
             "type": "integer"
+          },
+          "version": {
+            "type": "string"
                 }
             }
         }
